1998-07-13  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Makefile.am (rglclock_LDFLAGS): Removed.
	* configure.in: Remove AM_PROG_LIBTOOL.

	* NEWS: Updated.

	* module.cc (draw_clock): Draw a mark at the top of the dial.
	(rotate): Correct rotation.

	* configure.in: Check unistd.h and gettimeofday.

	* module.cc (draw_clock): Use glXXXf functions instead of glXXXd.

1998-07-12  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* glclock.cc: Update the FSF address.
	* glclock.h: Likewise.
	* main.cc: Likewise.
	* module.cc: Likewise.
	(draw_clock): Draw the back of the dial.

	* module.h: Likewise.

	* README: Add license information.

1998-07-11  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* NEWS: Updated.

	* TODO: Updated.

	* glclock.h (class glclock): Remove member tm and add t.
	(class glclock): Update the definition.  Reorder data members.
	* glclock.cc (glclock): Set the new member.
	(update): Update and use the new member.
	(handle_configure_event): Create a context if none.
	(create_context): Removed.
	(glclock): Do not connect "realize" to a handler.
	(handle_destroy_event): New function.
	(glclock): Connect "destroy_event" to its handler.
	(~glclock): Do not destroy context.
	(update): Do not test the availability of a window.

	* glclock.cc (handle_expose_event): Do not draw here.

	* main.cc (clean): New function.
	(handle_delete_event): Call gtk_main_quit instead.
	(main): Register clean as a exit function.
	(handle_sig_by_exit): Removed.
	(set_handlers): Removed.
	(main): Remove a call to set_handlers.

	* main.cc (handle_delete_event): New function.
	(main): Connect a "delete_event" handler for toplevel.

	* glclock.cc (update): Draw clock only when a window and a context
	are available.

1998-07-09  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Version 0.24 released.

	* TODO: Updated.

	* NEWS: Updated.

	* glclock.cc (glclock): Install the "button_press/release_event"
	handlers.
	(glclock): Change rot_velocity's initial value to 0.